--- a/src/App.scss
+++ b/src/App.scss
@@ -7,16 +7,93 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.app-container{
-  .header-container{
-    .navbar-nav{
-      .nav-link{
-        &.active{
-          color: red;
+
+@media (min-width: 1350px)
+{
+  .container, .container-lg, .container-md, .container-sm, .container-xl {
+    max-width: 1200px!important;
+}
+}
+
+
+.app-container {
+  .btn{
+    padding: 0 25px;
+    border-radius: 5px;
+    height: 40px;
+    border: 1px solid;
+    font-weight: 600;
+
+    // font-weight: 400px;
+    // transition: all 0.5s;
+  }
+  .header-container {
+    .nav-container-custom{
+      position: relative;
+      top: 0;
+      z-index: 10;
+      padding-top: 10px;
+      background-color: rgba(0,0,0,0)!important;
+      .navbar-nav {
+        .nav-link {
+          &.active {
+            color: red;
+          }
+        }
+  
+      }
+      .btn-login{
+        margin-right: 20px;
+        background-color: #e2d6d6;
+        opacity: 0.7;
+        &:hover{
+          opacity: 0.9;
+          background-color: #f8ecec;
         }
       }
-
+      .btn-logout{
+        background-color: #2c2b2b;
+        color: white;
+        opacity: 0.7;
+        &:hover{
+          opacity: 0.9;
+          background-color: #1a1919;
+          
+        }
+      }
     }
   }
-
+  .home-container {
+    video {
+      position: fixed;
+      bottom: 0;
+      width: 100vw;
+    }
+    .home-content{
+      padding: 15px 50px;
+      position: relative;
+      z-index: 10;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      .title-1{
+        font-weight: 600;
+        font-size: 45px;
+      }
+      .title-2{
+        font-size: 25px;
+      }
+      .title-3{
+        button{
+          background-color: #2c2b2b;
+          color: white;
+          &:hover{
+            background-color: #1a1919;
+            
+          }
+        }
+      }
+    }
+  }
 }
