--- a/src/components/admin/contents/managerUser.scss
+++ b/src/components/admin/contents/managerUser.scss
@@ -27,3 +27,10 @@
         }
     }
 }
+.manager-user-container{
+    .title{
+        padding: 10px;
+        font-weight: 600;
+        font-size: 20px;
+    }
+}
