--- a/src/components/admin/contents/managerUser.scss
+++ b/src/components/admin/contents/managerUser.scss
@@ -33,4 +33,9 @@
         font-weight: 600;
         font-size: 20px;
     }
+    .user-content {
+        .table-user{
+            padding: 15px 0;
+        }
+    }
 }
