--- a/src/components/user/detailQuiz.scss
+++ b/src/components/user/detailQuiz.scss
@@ -1,42 +1,86 @@
-.detail-quiz-container{
+.detail-quiz-container {
     padding: 50px;
     display: flex;
     gap: 15px;
-    .content-left{
-        width:70%;
+
+    .content-left {
+        width: 70%;
         border: 2px solid #ccc;
-        border-radius:5px ;
+        border-radius: 5px;
         padding: 20px 50px;
-        .title{
+
+        .title {
             font-size: 30px;
             font-weight: 600;
         }
-        .detai-quiz-description{
+
+        .detai-quiz-description {
             height: 200px;
             display: flex;
             justify-content: center;
             margin: 15px 0;
-            img{
+
+            img {
                 height: 200px;
                 width: 300px;
             }
         }
-        .question{
-            h3{
+
+        .question {
+            h3 {
                 font-size: 20px;
-            font-weight: 600;
+                font-weight: 600;
             }
         }
-        .detal-quiz-footer{
+
+        .detal-quiz-footer {
             display: flex;
             gap: 15px;
             justify-content: center;
             align-items: center;
         }
     }
-    .content-right{
+
+    .content-right {
         width: 30%;
         border: 2px solid #ccc;
-        border-radius:5px ;
+        border-radius: 5px;
+        padding: 20px;
+
+        .main-timer {
+            text-align: center;
+            font-size: 25px;
+            font-weight: 600;
+            border-bottom: 1px dashed;
+            padding-bottom: 23px;
+        }
+
+        .main-question {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            padding: 20px;
+
+            .question {
+                width: 40px;
+                height: 40px;
+                border: 1px solid #ccc;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                cursor: pointer;
+                &:hover{
+                    border: 1px solid black;
+                    background-color: #e0d2d2;
+                }
+                &.selected{
+                    background-color: #e0d2d2;
+                }
+                &.clicked{
+                    border: 1px solid black;
+                }
+            }
+        }
     }
 }
