--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -4,6 +4,7 @@
         color: #333;
         align-items: center;
         height: 45px;
+        gap: 10px;
 
         .btn-register {
             border: 1px solid;
